provided/week07_feedback.txt
Submission correctly tagged with: 'week07' (sha: cd9cdea2d826cee2efb651ba4c21a4faa5a5422e)
--------
Checking for expected files
Found expected file done/node.c on tag week07
Found expected file done/network.h on tag week07
Found expected file done/network.c on tag week07
Found expected file done/hashtable.c on tag week07
Found expected file done/Makefile on tag week07
Found expected file done/client.h on tag week07
Found expected file done/pps-client-put.c on tag week07
Found expected file done/log-packets.c on tag week07
Found expected file done/node_list.h on tag week07
Found expected file done/ring.h on tag week07
Found expected file done/pps-launch-server.c on tag week07
Found expected file done/hashtable.h on tag week07
Found expected file done/pps-client-get.c on tag week07
Found expected file done/client.c on tag week07
Found expected file done/node.h on tag week07
Found expected file done/node_list.c on tag week07
--------
Force copying (overwriting) provided file: tests.h
Force copying (overwriting) provided file: system.h
Force copying (overwriting) provided file: config.h
Force copying (overwriting) provided file: network.h
Force copying (overwriting) provided file: util.c
Force copying (overwriting) provided file: log-packets.c
Force copying (overwriting) provided file: util.h
Force copying (overwriting) provided file: ring.h
Force copying (overwriting) provided file: system.c
Got error code 2 when running trying to build target 'test-hashtable' with command 'make test-hashtable'
stdout: cc -DDEBUG    test-hashtable.c  -lcheck -lm -lrt -pthread -lsubunit -o test-hashtable
<builtin>: recipe for target 'test-hashtable' failed

---
stderr: test-hashtable.c: In function ‘construct_and_delete’:
test-hashtable.c:128:9: error: incompatible types when initializing type ‘const void *’ using type ‘Htable_t {aka struct <anonymous>}’
         ck_assert_ptr_nonnull(table);
         ^
test-hashtable.c: In function ‘bad_construct’:
test-hashtable.c:139:5: error: conversion to non-scalar type requested
     Htable_t ret = NO_HTABLE;
     ^
test-hashtable.c:140:5: error: incompatible types when initializing type ‘const void *’ using type ‘Htable_t {aka struct <anonymous>}’
     ck_assert_ptr_null(ret = construct_Htable(0));
     ^
test-hashtable.c:141:13: error: invalid operands to binary != (have ‘Htable_t {aka struct <anonymous>}’ and ‘void *’)
     if (ret != NULL) free(ret);
             ^
test-hashtable.c:141:27: error: incompatible type for argument 1 of ‘free’
     if (ret != NULL) free(ret);
                           ^
In file included from test-hashtable.c:17:0:
/usr/include/stdlib.h:483:13: note: expected ‘void *’ but argument is of type ‘Htable_t {aka struct <anonymous>}’
 extern void free (void *__ptr) __THROW;
             ^
In file included from test-hashtable.c:20:0:
test-hashtable.c:145:58: error: invalid type argument of unary ‘*’ (have ‘Htable_t {aka struct <anonymous>}’)
                                  1 + ((SIZE_MAX - sizeof(*ret)) / sizeof(*ret->map))
                                                          ^
test-hashtable.c:144:5: note: in expansion of macro ‘ck_assert_ptr_null’
     ck_assert_ptr_null(ret = construct_Htable(
     ^
test-hashtable.c:145:78: error: invalid type argument of ‘->’ (have ‘Htable_t {aka struct <anonymous>}’)
                                  1 + ((SIZE_MAX - sizeof(*ret)) / sizeof(*ret->map))
                                                                              ^
test-hashtable.c:144:5: note: in expansion of macro ‘ck_assert_ptr_null’
     ck_assert_ptr_null(ret = construct_Htable(
     ^
test-hashtable.c:147:13: error: invalid operands to binary != (have ‘Htable_t {aka struct <anonymous>}’ and ‘void *’)
     if (ret != NULL) free(ret);
             ^
test-hashtable.c:147:27: error: incompatible type for argument 1 of ‘free’
     if (ret != NULL) free(ret);
                           ^
In file included from test-hashtable.c:17:0:
/usr/include/stdlib.h:483:13: note: expected ‘void *’ but argument is of type ‘Htable_t {aka struct <anonymous>}’
 extern void free (void *__ptr) __THROW;
             ^
test-hashtable.c: In function ‘add_with_NULL_table_return_ERR_BAD_PARAMETER’:
test-hashtable.c:172:1: error: incompatible type for argument 1 of ‘add_Htable_value’
 hashtable_with_NULL_return(add, int, ERR_BAD_PARAMETER, table, NULL, key, value)
 ^
In file included from test-hashtable.c:23:0:
hashtable.h:96:12: note: expected ‘Htable_t {aka struct <anonymous>}’ but argument is of type ‘void *’
 error_code add_Htable_value(Htable_t table, pps_key_t key, pps_value_t value);
            ^
test-hashtable.c: In function ‘get_with_NULL_table_return_NULL’:
test-hashtable.c:175:1: error: incompatible type for argument 1 of ‘get_Htable_value’
 hashtable_with_NULL_return(get, pps_value_t, NULL, table, NULL, key)
 ^
In file included from test-hashtable.c:23:0:
hashtable.h:104:13: note: expected ‘Htable_t {aka struct <anonymous>}’ but argument is of type ‘void *’
 pps_value_t get_Htable_value(Htable_t table, pps_key_t key);
             ^
make: *** [test-hashtable] Error 1

Got error code 2 when running trying to build target 'test-hashtable' with command '[staff makefile]'
Got error code 2 when running trying to build target 'test-hashtable' with command '[staff makefile]'
Unable to build target 'test-hashtable'
Unable to run test-hashtable. Executable couldn't build

-------------------------
Running test scripts


Test 05.basic.sh returned code 0
stdout:
>> running 05.basic.sh
Test 1 (server launch): PASS
Test 2 (client put): PASS
Test 3 (client get): PASS
SUCCESS

------
stderr:

-----------
Test 06.basic.sh returned code 0
stdout:
>> running 06.basic.sh
Test 1 (launch 1st server): PASS
Test 2 (launch 2nd server): PASS
Test 3 (put, 2 servers): PASS
Test 4 (get, 2 servers): PASS
SUCCESS

------
stderr:

-----------
Test 07.basic.sh returned code 0
stdout:
>> running 07.basic.sh
Test 1 (launch 1st server): PASS
Test 2 (launch 2nd server): PASS
Test 3 (put, 2 servers): PASS
Test 4 (get, 2 servers): PASS
SUCCESS

------
stderr:

